# testai-repo-inspector

./: .gitignore  README.md  pyproject.toml
src/testai-repo-inspector/: crew.py  main.py
src/testai-repo-inspector/config/: agents.yaml
src/testai_repo_inspector/: crew.py  main.py
src/testai_repo_inspector/config/: agents.yaml  tasks.yaml
